Fixed how the site becomes formatted when it is viewed in too narrow of a window. Also fixed the formatting of the copyright at the top of the module file.

--- a/front-end/src/app/styles/blog-list.css
+++ b/front-end/src/app/styles/blog-list.css
@@ -14,16 +14,21 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  */
 
 .post h1, .post h2, .post p {
-    margin-bottom: 0.5em;
-    margin-right: 0.5em;
-    margin-left: 0;
-    margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 0.5em;
+  margin-left: 0;
+  margin-top: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  vertical-align: middle;
 }
 
 .post h2 {
-     display: inline-block;
+  display: inline-block;
 }
 
 .post-list {
-    margin: 2em;
+  margin: 2em;
 }
